--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='pt'>
     <head>
-        <title>Copa do Mundo - Brasil </title>
+        <title>Copa do Mundo  Brasil </title>
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body >
